# stm32-blinky476

./: .cproject  .mxproject  .project  CMakeLists.txt  README.md  blinky476.ioc
Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Src/: main.c  stm32l4xx_it.c
conf/: gdb_load  run.jdebug
conf/toolchains/: STM32L476RGTx.cmake
tools/: start-jlink-gdb-server.sh
